fix: pending teachers api fetching and data mapping working